--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "next": "^13.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sequelize": "^6.33.0",
+    "sqlite3": "^5.1.6",
     "viem": "~0.3.36",
-    "wagmi": "^1.0.6"
+    "wagmi": "^1.0.6",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^17.0.31",
