--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sequelize": "^6.33.0",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "sqlite3": "^5.1.6",
     "viem": "~0.3.36",
     "wagmi": "^1.0.6",
