--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.14",
     "@rainbow-me/rainbowkit": "^1.0.0",
+    "moment": "^2.29.4",
     "next": "^13.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
