--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@types/node": "^17.0.31",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
